tests/snapshots/execution_spec__test-set-cookie-headers.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "set-cookie": "foo2=bar2"
  },
  "body": {
    "data": {
      "user": {
        "name": "foo"
      }
    }
  }
}
