tests/snapshots/execution_spec__test-static-value.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "name": "Leanne Graham"
      }
    }
  }
}
