tests/snapshots/execution_spec__test-undefined-query.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "no type 'user.nested.inner.id.test' found",
    "trace": [
      "Post",
      "innerIdNested",
      "@http",
      "query"
    ],
    "description": null
  },
  {
    "message": "no value 'test' found",
    "trace": [
      "Post",
      "user",
      "@http",
      "query"
    ],
    "description": null
  },
  {
    "message": "no value 'user.nested.inner.test' found",
    "trace": [
      "Post",
      "innerNested",
      "@http",
      "query"
    ],
    "description": null
  },
  {
    "message": "no value 'user.nested.test' found",
    "trace": [
      "Post",
      "nested",
      "@http",
      "query"
    ],
    "description": null
  }
]
