tests/snapshots/execution_spec__test-union.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  bar: String
}

scalar Date

scalar Email

scalar Empty

type Foo {
  foo: String
}

union FooBar = Bar | Foo

scalar JSON

scalar PhoneNumber

type Query {
  foo: FooBar
}

scalar Url

schema {
  query: Query
}
